src/parse/snapshots/protox__parse__tests__parse_import-3.snap
---
source: src/parse/tests.rs
expression: parser.parse_import()
---
Ok(
    Import {
        kind: Some(
            Weak,
        ),
        kind_span: Some(
            7..11,
        ),
        value: String {
            value: "foo",
            span: 12..17,
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..18,
    },
)
