src/parse/snapshots/protox__parse__tests__parse_import-4.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_import() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Ok(
    Import {
        kind: Some(
            (
                Public,
                7..13,
            ),
        ),
        value: String {
            value: "foo",
            span: 14..22,
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..23,
    },
)
