src/parse/snapshots/protox__parse__tests__parse_import-5.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_import() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "a string literal, 'public' or 'weak'",
            found: Semicolon,
            span: 7..8,
        },
    ],
)
