src/parse/snapshots/protox__parse__tests__parse_import-7.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_import() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "';'",
            found: Message,
            span: 13..20,
        },
    ],
)
