src/parse/snapshots/protox__parse__tests__parse_import-8.snap
---
source: src/parse/tests.rs
expression: parser.parse_import()
---
Ok(
    Import {
        kind: None,
        kind_span: None,
        value: String {
            value: "foo\\bar",
            span: 7..17,
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..18,
    },
)
