src/parse/snapshots/protox__parse__tests__parse_message-11.snap
---
source: src/parse/tests.rs
expression: "match parser.parse_message() {\n    Ok(value) => Ok(value),\n    Err(()) => Err(parser.lexer.extras.errors),\n}"
---
Err(
    [
        UnexpectedToken {
            expected: "a message field, oneof, reserved range, enum, message, option or '}'",
            found: Comma,
            span: 14..15,
        },
    ],
)
