src/parse/snapshots/protox__parse__tests__parse_message-2.snap
---
source: src/parse/tests.rs
expression: parser.parse_message()
---
Ok(
    Message {
        name: Ident {
            value: "Foo",
            span: 30..33,
        },
        body: MessageBody {
            items: [],
            extensions: [],
            options: [],
            reserved: [],
        },
        comments: Comments {
            leading_detached_comments: [
                "detached\n",
            ],
            leading_comment: Some(
                "leading",
            ),
            trailing_comment: Some(
                "trailing",
            ),
        },
        span: 22..48,
    },
)
