src/parse/snapshots/protox__parse__tests__parse_message-3.snap
---
source: src/parse/tests.rs
expression: parser.parse_message()
---
Ok(
    Message {
        name: Ident {
            value: "Foo",
            span: 8..11,
        },
        body: MessageBody {
            items: [],
            extensions: [],
            options: [],
            reserved: [],
        },
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..19,
    },
)
